--- a/Javascript/13 - workaround explorer/index.html
+++ b/Javascript/13 - workaround explorer/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>WorkAround</title>
     <link rel="stylesheet" type="text/css" href="./css/index.css" />
-    <script src="./js/main.js" defer></script>
+    <script type="module" src="./js/main.js" defer></script>
   </head>
   <body>
     <main>
