project upload part 3

--- a/Javascript/16 - wanderlust/index.html
+++ b/Javascript/16 - wanderlust/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Wanderlust</title>
-    <link rel="stylesheet" type="text/css" href="public/reset.css" />
-    <link rel="stylesheet" type="text/css" href="public/style.css" />
+    <link rel="stylesheet" type="text/css" href="./css/reset.css" />
+    <link rel="stylesheet" type="text/css" href="./css/style.css" />
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro|Work+Sans" rel="stylesheet">
   </head>
   <body>
     <header>
-      <img class="logo" src="https://content.codecademy.com/courses/intermediate-javascript-requests/wanderlust/logo.svg" alt="logo" />
+      <img class="logo" src="./img/Group 2.svg" alt="logo" />
     </header>
     <main>
       <h1>Where do you want to land?</h1>
@@ -36,14 +36,14 @@
     <div class="sectiontitle">
       <h2>TOP ATTRACTIONS</h2>
     </div>
-    <section id="venues">
-      <div class="venue" id="venue1">
+    <section id="places">
+      <div class="place" id="place1">
 
       </div>
-      <div class="venue" id="venue2">
+      <div class="place" id="place2">
 
       </div>
-      <div class="venue" id="venue3">
+      <div class="place" id="place3">
 
       </div>
     </section>
@@ -55,7 +55,7 @@
   src="https://code.jquery.com/jquery-3.2.1.min.js"
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
   crossorigin="anonymous"></script>
-    <script src="public/helpers.js"></script>
-    <script src="public/main.js"></script>
+    <script src="./js/helpers.js"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
